@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.videomediaset" name="Video Mediaset" provider-name="phate89, aracnoz" version="1.2.1">
+<addon id="plugin.video.videomediaset" name="Video Mediaset" provider-name="phate89, aracnoz" version="1.2.2">
     <requires>
         <import addon="xbmc.python" version="2.24.0" />
         <import addon="script.module.phate89" version="1.0.0"/>
@@ -17,7 +17,7 @@
 		<license>GNU GENERAL PUBLIC LICENSE. Version 2, June 1991</license>
 		<forum>http://forum.kodi.tv/showthread.php?tid=292876</forum>
 		<source>https://github.com/phate89/plugin.video.videomediaset</source>
-        <news>v1.2.1
-- fixed the addon after website changes</news>
+        <news>v1.2.2
+- fixed the addon after website changes (thx to wizy)</news>
     </extension>
 </addon>
