@@ -1,3 +1,6 @@
+[B]1.2.2[/B]
+- fixed the addon after website changes (thx to wizy)
+
 [B]1.2.1[/B]
 - fixed the addon after website changes
 
